# gh-aw-trial-2

./: AGENTS.md  Dockerfile  MCP.dockerfile  README.md  compose.yaml  fortify.py  history.jsonl  notes.md  pyproject.toml  state.json
.github/workflows/: daily-perf-improver.lock.yml  daily-perf-improver.md
aspire-app/: apphost.cs  apphost.run.json  otel-collector-config.yaml
docs/: DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  ENDPOINTS.md  FILLER_PHRASES.md  GUARDRAILS.md  INFRA.md  LANGUAGE_SWITCHING.md  LDP_CACHE_WARMING.md  LOGGING.md  MCP_OPTIMIZATION.md  RELEASE.md  SANDBOX_TEST_CASES.md  SMS_CONSENT.md  STREAMING.md  TESTING.md  VERIFICATION.md  VOICE_ARCHITECTURE.md  VOICE_INTERACTION.md  artie.mmd  deployment.mmd  design.mmd  single-agent.mmd  system.mmd
docs/adr/: 001-single-agent.md  002-prospect-voice-to-applicant.md  003-remove-prefetching.md  004-refactor-mcp.md  005-responder-thinker.md  006-thinker-prompts-modified-by-ai.md  007-one-agent-for-text.md  008-unified-voice.md  009-conform-to-problem-detail.md  010-remove-legacy-responder-thinker.md  011-voice-refactor.md  README.md
infra/alpha-leasing/: .terraform.lock.hcl  elasticache.tf  leasing.tf  terraform.tf  terraform.tfvars  variables.tf  voice.tf
infra/alpha-leasing/task_definitions/: agent-leasing-cluster  agent-leasing-voice.tf  agent-leasing.tf  secrets.tf
infra/alpha-mcp/: .terraform.lock.hcl  service.tf  terraform.tf  terraform.tfvars  variables.tf
infra/alpha-mcp/task_definitions/: .terraform.lock.hcl  agent-leasing-mcp.tf  secrets.tf
infra/beta/: elasticache.tf  service.tf  terraform.tf  terraform.tfvars  voice.tf
infra/beta/task_definitions/: agent-leasing-cluster  agent-leasing-voice.tf
infra/prod/: elasticache.tf  lambda.tf  service.tf  terraform.tf  terraform.tfvars  variables.tf  voice.tf
infra/prod/task_definitions/: agent-leasing-cluster  agent-leasing.tf
lambdas/ldp_cache_warmer/: handler.py  requirements.txt
scripts/: analyze_test_failures.py  fetch_payload.py  fetch_tfs_test_cases.py  mirror_issue_to_jira.py  remove_unused_secrets.py  run_locust.sh  service_request_failures.py  start.sh  start_otel.sh  sync_envs.py  test_failure_frequency.py  verify_sandbox.py  voice_test_client.py
scripts/release_tools/: __init__.py  build_report.py  collect_payload.py
scripts/task_activity_backfill/: README.md  env_loader.py  property_lookup.py  publish_backfill_events.py  replay_trace_activity_events.py
src/agent_leasing/: chatbot.py  cli_render_prompt.py  cli_streaming.py  cli_text.py  server.py  settings.py  twilio_handler.py
src/agent_leasing/agent/: __init__.py  hooks.py  qna_taxonomy.py  util.py
src/agent_leasing/api/: example_ask_request.json  model.py  openapi.py  service.py  util.py
src/agent_leasing/clients/: ldp.py  mcp.py  openai.py
src/agent_leasing/kafka/: cluster_config.py  common_context.py  data_curation_schema.json  fire_and_forget.py  kafka_context.py  kafka_producer.py  kafka_recorder.py  references.py  registry_producer.py  sample_producer.py  task_id.py
src/agent_leasing/models/: __init__.py  context.py
src/agent_leasing/services/: agent_service.py  analytics_service.py  backend_check_service.py  input_sanitizers.py  telemetry_service.py  tracing_service.py
src/agent_leasing/static/: app.js  index.html
src/agent_leasing/util/: agents_tracing_patch.py  audio_noise_reduction.py  call_state_manager.py  guardrails_reponses.yaml  helpers.py  langsmith_configuration.py  language_utils.py  memory.py  otel_configuration.py  phone_validator.py  realtime_util.py  sms_consent.py  streaming_util.py  tracing_utils.py  twilio_util.py  voice_text_normalizer.py
src/agent_leasing/voice/: __init__.py  agent.py  callbacks.py  config.py  handler.py
src/agent_leasing/voice_ui/: voice_ui_handler.py
src/examples/: exercise_memory.py  message_history.py  message_history_conversations.py  openai_setup.py  simple_agent.py  simple_agent_wth_mcp.py  simple_responses.py  tracing_example.py
src/examples/streaming/: streaming_client.py
tests/: conftest.py  date_helpers.py  mockserver-expectations.json  pool_plugin.py  stubbed_mcp.py  test_twilio_recording.py
tests/e2e/: conftest.py  test_server.py
tests/http/: chat_invalid_request.http  chat_request.http  facilities-mcp.http  hello-openai.http  hello.http  http-client.env.json  property-cache-warmer.http  put-expectation.http  unified-login.http
tests/integration/: conftest.py  helpers.py  langsmith_utils.py
tests/integration/analytics/: test_analytics_flow.py
tests/integration/services/: test_conversation_orphan_recovery.py
tests/integration/util/: test_agent_util.py  test_memory.py
tests/lambdas/ldp_cache_warmer/: test_handler.py
tests/load/: locustfile.py
tests/mockserver/: Dockerfile
tests/unit/: conftest.py  test_anyio_patch.py  test_cli_render_prompt.py  test_cli_streaming.py  test_cli_text.py  test_filler_escalation.py  test_guardrail_config.py  test_handle_active_handoff_sms_consent.py  test_integration_helpers.py  test_integration_tool_mocks.py  test_model_settings.py  test_server.py  test_tool_call_assertions.py  test_twilio_handler.py  test_twilio_handler_extras.py  test_twilio_handler_greeting.py  test_twilio_handler_user_speaking.py  test_voice_thinker_run_merge.py
tests/unit/agent/: test_hooks.py  test_misc_coverage.py  test_qna_taxonomy.py  test_util.py  test_util_extras.py
tests/unit/api/: test_auth_helper.py  test_former_type.py  test_model.py  test_model_emergency_product.py  test_util.py
tests/unit/clients/: test_ldp.py  test_mcp.py  test_openai.py  test_openai_client.py
tests/unit/kafka/: __init__.py  conftest.py  test_cluster_config.py  test_common_context.py  test_fire_and_forget.py  test_kafka_context.py  test_kafka_producer.py  test_kafka_recorder.py  test_references.py  test_registry_producer.py  test_sample_producer.py  test_task_id.py
tests/unit/models/: test_models.py  test_session_scope_time.py
tests/unit/services/: test_agent_service.py  test_analytics_service.py  test_backend_check_service.py  test_input_sanitizers.py  test_telemetry_service.py  (+1 more)
(+240 files in other folders)
